--- a/homeWork_d2_1/.project
+++ b/homeWork_d2_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>homeWork_d2</name>
+	<name>homeWork_d2_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
