4.ders 3.odev yuklendi

--- a/homeWork_d4_3/GameSimDemo/gameSimulationDemo/.project
+++ b/homeWork_d4_3/GameSimDemo/gameSimulationDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Gamer</name>
+	<name>gameSimulationDemo</name>
 	<comment></comment>
 	<projects>
 	</projects>
